cicd-pipeline-jenkins-terraform-ansible-k8s/k8s/base/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: quiz-api
spec:
  host: quiz-api
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: quiz-web
spec:
  host: quiz-web
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
